format tests; use some JDK 11 stuff